add basic get projects case
